@@ -1,4 +1,5 @@
 1.2.2 - TBD
+    * Using -render without a scene name argument prints out available scenes
     * Added Help tab listing keyboard shortcuts in the Render Controls window
     * Pressing U in the Render Preview window makes it go fullscreen
     * The scene selector can now to delete scenes or export scenes to Zip file
